--- a/views/partials/control_navigation.html
+++ b/views/partials/control_navigation.html
@@ -177,45 +177,47 @@
             {{#if home}}
               {{> account/old-profiles}}
             {{else}}
-            <div class="menu">
-              <a href="#login" class="button button-open" id="loginbtn">Log in</a>
-              <div class="dropdown dd-right" id="login">
-                <div class="dropdowncontent">
-                  <form class="forgot" action="{{root}}/forgot" method="post">
-                    <div>
-                      <label>Email<br>
-                      <input name="email" required type="email"></label>
+<!-- don't enable register/login now
+                <div class="menu">
+                  <a href="#login" class="button button-open" id="loginbtn">Log in</a>
+                  <div class="dropdown dd-right" id="login">
+                    <div class="dropdowncontent">
+                      <form class="forgot" action="{{root}}/forgot" method="post">
+                        <div>
+                          <label>Email<br>
+                          <input name="email" required type="email"></label>
+                        </div>
+                        <div>
+                          <input type=submit value="Request password reset">
+                          <input type="hidden" name="_csrf" value="{{token}}">
+                          <input type="hidden" name="_redirect" value="home">
+                        </div>
+                      </form>
+                      <form class="login" action="{{root}}/login" method="post">
+                        <p class="loginFeedback"></p>
+                        <div>
+                          <label>Username or Email<br>
+                          <input name="username" type="text"></label>
+                        </div>
+                        <div>
+                          <label>Password<br>
+                          <input name="password" type="password"></label>
+                        </div>
+                        <div>
+                          <input type=submit value="Log in">
+                          <a id="lostpass" href="{{root}}/forgot">Reset password</a>
+                        </div>
+                        {{#feature request "github"}}
+                        <div>
+                          <span class="login-splitter">or</span>
+                          <a title="To sign in using Github and export gists to your Github profile" class="btn-github" href="{{root}}/auth/github"><img src="{{static}}/images/github-32.png"> Sign in with Github</a>
+                        </div>
+                        {{/feature}}
+                      </form>
                     </div>
-                    <div>
-                      <input type=submit value="Request password reset">
-                      <input type="hidden" name="_csrf" value="{{token}}">
-                      <input type="hidden" name="_redirect" value="home">
-                    </div>
-                  </form>
-                  <form class="login" action="{{root}}/login" method="post">
-                    <p class="loginFeedback"></p>
-                    <div>
-                      <label>Username or Email<br>
-                      <input name="username" type="text"></label>
-                    </div>
-                    <div>
-                      <label>Password<br>
-                      <input name="password" type="password"></label>
-                    </div>
-                    <div>
-                      <input type=submit value="Log in">
-                      <a id="lostpass" href="{{root}}/forgot">Reset password</a>
-                    </div>
-                    {{#feature request "github"}}
-                    <div>
-                      <span class="login-splitter">or</span>
-                      <a title="To sign in using Github and export gists to your Github profile" class="btn-github" href="{{root}}/auth/github"><img src="{{static}}/images/github-32.png"> Sign in with Github</a>
-                    </div>
-                    {{/feature}}
-                  </form>
+                  </div>
                 </div>
-              </div>
-            </div><div class="menu">
+            <div class="menu">
               <a href="#register" class="button button-open focusbtn" id="regbtn">Register</a>
               <div class="dropdown dd-right" id="register">
                 <div class="dropdowncontent">
@@ -246,6 +248,7 @@
                 </div>
               </div>
             </div>
+    -->
             {{/if}}
           {{/feature}}
         {{/unless}}
